# tatami_layered

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  classes.html  convert__to__layered__sparse_8hpp.html  convert__to__layered__sparse_8hpp_source.html  dir_1b08e365cad4db8228ff9814fe9f6af0.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacetatami__layered.html  read__layered__sparse__from__matrix__market_8hpp.html  read__layered__sparse__from__matrix__market_8hpp_source.html  structtatami__layered_1_1ConvertToLayeredSparseOptions-members.html  structtatami__layered_1_1ConvertToLayeredSparseOptions.html  structtatami__layered_1_1ReadLayeredSparseFromMatrixMarketOptions-members.html  structtatami__layered_1_1ReadLayeredSparseFromMatrixMarketOptions.html  tatami__layered_8hpp.html  tatami__layered_8hpp_source.html  tatami_hdf5.tag  tatami_layered.tag
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_2.js  classes_a.js  files_2.js  files_6.js  files_9.js  files_b.js  files_c.js  files_d.js  functions_2.js  functions_3.js  functions_5.js  functions_b.js  functions_c.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_8.js
include/tatami_layered/: convert_to_layered_sparse.hpp  read_layered_sparse_from_matrix_market.hpp  tatami_layered.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: convert_to_layered_sparse.cpp  mock_layered_sparse_data.h  read_layered_sparse_from_matrix_market.cpp  utils.cpp
